<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottomBarHome"
        android:title="@string/home"
        android:icon="@drawable/selector_home_main"/>
    <item
        android:id="@+id/bottomBarGift"
        android:title="@string/gift"
        android:icon="@drawable/selector_gift_main"/>
    <item
        android:id="@+id/bottomBarFavorite"
        android:title="Yêu thích"
        android:icon="@drawable/selector_favorite_main"/>
<!--    <item-->
<!--        android:id="@+id/bottomBarNotification"-->
<!--        android:title="@string/notification"-->
<!--        android:icon="@drawable/selector_bookmark_main"/>-->

    <item
        android:id="@+id/bottomBarProfile"
        android:title="@string/profile"
        android:icon="@drawable/selector_profile_main"/>
</menu>
