<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:layout_width="match_parent"
     android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_24"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_21"
            android:layout_marginTop="@dimen/margin_36" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/title_require_input_register"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/gray_595959"
            android:fontFamily="@font/montserrat_medium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            android:text="@string/label_name"
            android:textSize="@dimen/text_size_16"
            android:fontFamily="@font/montserrat_semi_bold"
            android:textColor="@color/black"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/enter_name"
            app:boxStrokeColor="@color/primary"
            app:errorEnabled="true"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/primary"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_person">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat_medium"
                android:textSize="@dimen/text_size_14"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            android:text="@string/label_phone_number"
            android:textSize="@dimen/text_size_16"
            android:fontFamily="@font/montserrat_semi_bold"
            android:textColor="@color/black"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPhone"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/enter_phone_number"
            app:boxStrokeColor="@color/primary"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:hintTextColor="@color/primary"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPhone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat_medium"
                android:inputType="number"
                android:textSize="@dimen/text_size_14"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            android:text="@string/title_email"
            android:textSize="@dimen/text_size_16"
            android:fontFamily="@font/montserrat_semi_bold"
            android:textColor="@color/black"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/enter_email"
            app:boxStrokeColor="@color/primary"
            app:errorEnabled="true"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/primary"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat_medium"
                android:textSize="@dimen/text_size_14"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            android:text="@string/title_password"
            android:textSize="@dimen/text_size_16"
            android:fontFamily="@font/montserrat_semi_bold"
            android:textColor="@color/black"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            app:errorEnabled="true"
            android:hint="@string/enter_password"
            app:boxStrokeColor="@color/primary"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/primary"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat_medium"
                android:inputType="textPassword"
                android:textSize="@dimen/text_size_14"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            android:text="@string/re_password"
            android:textSize="@dimen/text_size_16"
            android:fontFamily="@font/montserrat_semi_bold"
            android:textColor="@color/black"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilConfirmPassword"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            app:errorEnabled="true"
            android:hint="@string/re_enter_password"
            app:boxStrokeColor="@color/primary"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/primary"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat_medium"
                android:inputType="textPassword"
                android:textSize="@dimen/text_size_14"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            android:text="Địa chỉ"
            android:textSize="@dimen/text_size_16"
            android:fontFamily="@font/montserrat_semi_bold"
            android:textColor="@color/black"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAddress"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:hint="Nhập địa chỉ"
            app:boxStrokeColor="@color/primary"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:hintTextColor="@color/primary"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_address">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat_medium"
                android:inputType="text"
                android:autofillHints="postalAddress"
                android:textSize="@dimen/text_size_14"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/policy"
            android:textSize="@dimen/text_size_14"
            android:layout_marginTop="@dimen/margin_20"
            android:fontFamily="@font/montserrat_regular"
            app:layout_constraintTop_toBottomOf="@id/tilAddress"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_60"
            android:layout_marginTop="@dimen/margin_40"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18"
            app:cornerRadius="@dimen/margin_10"
            android:backgroundTint="@color/red600" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/margin_16">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/have_you_created_an_account_yet"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16" />

            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/login"
                android:textColor="@color/blue500"
                android:textSize="@dimen/text_size_16"
                android:layout_marginStart="@dimen/margin_4"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>