<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/margin_16"
    app:cardElevation="@dimen/margin_10">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_25"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/app_name"
            android:textSize="@dimen/text_size_22"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/content_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:fontFamily="@font/montserrat_medium"
            android:paddingHorizontal="@dimen/margin_24"
            android:text="@string/appbar_scrolling_view_behavior"
            android:textColor="@color/text_color_content_dialog"
            android:textSize="@dimen/text_size_17"
            app:layout_constraintEnd_toEndOf="@+id/title_dialog"
            app:layout_constraintStart_toStartOf="@+id/title_dialog"
            app:layout_constraintTop_toBottomOf="@+id/title_dialog" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/content_dialog">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/margin_10"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/montserrat_medium"
                android:padding="@dimen/margin_12"
                android:text="@string/cancel"
                android:textColor="@color/primary"
                android:textSize="@dimen/text_size_13"
                app:strokeColor="@color/primary"
                app:strokeWidth="2dp"
                app:cornerRadius="@dimen/margin_5"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_confirm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_weight="1"
                android:backgroundTint="@color/primary"
                android:fontFamily="@font/montserrat_medium"
                android:padding="@dimen/margin_12"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_13"
                app:cornerRadius="@dimen/margin_5"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>