<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/primary"
        android:elevation="@dimen/margin_2"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imv_back"
            android:layout_width="@dimen/margin_32"
            android:layout_height="@dimen/margin_32"
            android:layout_marginStart="@dimen/margin_8"
            android:background="@drawable/bg_circle_white"
            android:padding="4dp"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:text="Thông tin cá nhân"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/imv_back"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_16"
        app:layout_constraintTop_toBottomOf="@id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_15"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="@string/label_name"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilName"
                style="@style/CustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:hint="@string/enter_name"
                app:boxStrokeColor="@color/primary"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:hintTextColor="@color/primary"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_person">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat_medium"
                    android:textSize="@dimen/text_size_14" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_15"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="@string/label_phone_number"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPhone"
                style="@style/CustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:hint="@string/enter_phone_number"
                app:boxStrokeColor="@color/primary"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:hintTextColor="@color/primary"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat_medium"
                    android:inputType="number"
                    android:textSize="@dimen/text_size_14" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_15"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="@string/title_email"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                style="@style/CustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:hint="@string/enter_email"
                app:boxStrokeColor="@color/primary"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:hintTextColor="@color/primary"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat_medium"
                    android:textSize="@dimen/text_size_14" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_15"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="Địa chỉ"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilAddress"
                style="@style/CustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:hint="Nhập địa chỉ"
                app:boxStrokeColor="@color/primary"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:hintTextColor="@color/primary"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_address">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtAddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="postalAddress"
                    android:fontFamily="@font/montserrat_medium"
                    android:inputType="text"
                    android:textSize="@dimen/text_size_14" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:background="@drawable/bg_add_cart_btn"
                android:text="Cập nhật"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
